[fix] #30 createworkのリクエストボディの変更
